Store row view - added hover and fixed alignment
now the hover works on images in row view and moved around some text
elements

--- a/storegrid.css
+++ b/storegrid.css
@@ -134,7 +134,6 @@ A:active {
 	text-indent:0em;
 	padding-top:0.5px;
 
-	padding-left:1em;
 	padding-right:1em;
 	padding-bottom:0.5px;
 	border-radius:15px;
