--- a/storeviewmaincss.css
+++ b/storeviewmaincss.css
@@ -115,17 +115,24 @@ display: inline;
 	
 }
 
-#viewchange{
-height: 40px;
-	width:100px;
+#viewchangeholder {
+	height: 40px;
+	width: 700px;
+	/*
+	background-color: black;*/
 	margin: 0px auto;
+}
+
+#viewchange{
+	float: left;
+	height: 40px;
+	width: 100px;
+	margin: 0px auto;*/
 	border-style:none;
-	
 	background:linear-gradient(to right,#F75A93,#F75A73);
 	text-indent:0em;
-		padding-top:0.5px;
+	padding-top:0.5px;
 
-	padding-left:1em;
 	padding-right:1em;
 	padding-bottom:0.5px;
 	border-radius:15px;
@@ -360,16 +367,31 @@ display: inline;
 	float: left;
 	width: 120px;
 	height: 120px;
-	background-color: #000000;
+	/*background-color: #000000;*/
 	border-radius: 10px;
 	position: relative;
 	margin: 0px 30px 0px 0px;
-	background-image: url("candy2.jpg");
+	
+	/*background-image: url("candy2.jpg");
 	background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: 50% 50%;*/
 }
 
+#productimage img{
+	border-radius:5px;
+	border: 3px solid;
+	border-color: rgba(0,0,0,0.5);
+	}
+	
+#productimage :hover {
+	
+	
+	
+	border: 3px solid;
+	border-color: #F75A93; 
+	border-radius:5px;
+}
 
 #prodtext	{
 	float: left;
